snapshots/care/data4life/hc-util-sdk-kmp/error/1.13.0-SNAPSHOT/error-1.13.0-20220817.130540-1.module.sha1
8715a975f20b06c2c8670ef2706624ad68daeed0